--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "connect-history-api-fallback": "^1.6.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
